Regression: Cursor arrow shows up after fill operation execution #102650

Closed
opened 2022-11-21 07:21:23 +01:00 by Pratik Borhade · 22 comments
Member

System Information
Operating system: Windows-10-10.0.22000-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78

Blender Version
Broken: 3.5
Worked: 3.3

Change in cursor behavior came with bf85074148

Short description of error
Cursor arrow appears after performing fill operations. It'll disappear again when cursor is moved over other area
I guess only circular point with red outline is expected when tool is selected

Exact steps for others to reproduce the error

  • Open uploaded file
  • Select fill tool (notice cursor)
  • Attempt to fill closed region
  • After filling the closed area, default cursor arrow appears
  • Move cursor over other area (cursor arrow is gone now)
    #102650.blend
System Information Operating system: Windows-10-10.0.22000-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3050 Laptop GPU/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 512.78 **Blender Version** Broken: 3.5 Worked: 3.3 Change in cursor behavior came with bf85074148 **Short description of error** Cursor arrow appears after performing fill operations. It'll disappear again when cursor is moved over other area I guess only circular point with red outline is expected when tool is selected **Exact steps for others to reproduce the error** - Open uploaded file - Select fill tool (notice cursor) - Attempt to fill closed region - After filling the closed area, default cursor arrow appears - Move cursor over other area (cursor arrow is gone now) [#102650.blend](https://archive.blender.org/developer/F13954465/T102650.blend)
Author
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Can't reproduce on Linux X11 myself.

Can't reproduce on Linux X11 myself.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check

Can confirm, will check
Member

This seems to be a two-step regression:

  • fill tool now requires two clicks for the fill
  • cursor changes to default (as reported here)
This seems to be a two-step regression: - fill tool now requires **two clicks** for the fill - cursor changes to default (as reported here)

Added subscriber: @antoniov

Added subscriber: @antoniov

In #102650#1448914, @lichtwerk wrote:
This seems to be a two-step regression:

  • fill tool now requires two clicks for the fill
  • cursor changes to default (as reported here)

No, you don't need two clicks... the reason is you have enabled the help lines, so the first click enable the help lines and with the wheel mouse you can change the size. The second click is the confirmation.

> In #102650#1448914, @lichtwerk wrote: > This seems to be a two-step regression: > - fill tool now requires **two clicks** for the fill > - cursor changes to default (as reported here) No, you don't need two clicks... the reason is you have enabled the help lines, so the first click enable the help lines and with the wheel mouse you can change the size. The second click is the confirmation.
[2022-11-21 09-58-19.mp4](https://archive.blender.org/developer/F13955213/2022-11-21_09-58-19.mp4)
Member

In #102650#1448916, @antoniov wrote:
No, you don't need two clicks... the reason is you have enabled the help lines, so the first click enable the help lines and with the wheel mouse you can change the size. The second click is the confirmation.

Ah, we are talking https://docs.blender.org/manual/en/3.5/grease_pencil/modes/draw/tools/fill.html#automatic-gap-closure
(sorry, wasnt aware of this new feature)
It is a bit redundant for already closed shapes like in this report, but will make myself familiar with the gap filling

> In #102650#1448916, @antoniov wrote: > No, you don't need two clicks... the reason is you have enabled the help lines, so the first click enable the help lines and with the wheel mouse you can change the size. The second click is the confirmation. Ah, we are talking https://docs.blender.org/manual/en/3.5/grease_pencil/modes/draw/tools/fill.html#automatic-gap-closure (sorry, wasnt aware of this new feature) It is a bit redundant for already closed shapes like in this report, but will make myself familiar with the gap filling
Member

thx for the video!

thx for the video!
Member

As for the cursor change in behavior: this came with bf85074148

As for the cursor change in behavior: this came with bf85074148
Member

@antoniov: seems like the call to WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DEFAULT); is redundant?

@antoniov: seems like the call to `WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DEFAULT);` is redundant?

In #102650#1448945, @lichtwerk wrote:
@antoniov: seems like the call to WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DEFAULT); is redundant?

I don't think so except I miss something. When you do the first click, the cursor changes to a pencil cursor, but if you press MMB to change size of extend lines, the cursor chages while you move... as soon you release MMB the cursor back to pencil cursor.

> In #102650#1448945, @lichtwerk wrote: > @antoniov: seems like the call to `WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DEFAULT);` is redundant? I don't think so except I miss something. When you do the first click, the cursor changes to a pencil cursor, but if you press `MMB` to change size of extend lines, the cursor chages while you move... as soon you release `MMB` the cursor back to pencil cursor.
Author
Member

Can we raise the priority since this is a regression? May not be a top priority issue.

Can we raise the priority since this is a regression? May not be a top priority issue.

Really I don't see the bug. If you enable visual aids you must use two clicks because the first is to start and the second to confirm...during this time the cursor must be the pencil, when you confirm, the cursor is reseted. If you disable visual aids is only one click and the cursor is reset perfectly also.

Really I don't see the bug. If you enable `visual aids` you must use two clicks because the first is to start and the second to confirm...during this time the cursor must be the pencil, when you confirm, the cursor is reseted. If you disable `visual aids` is only one click and the cursor is reset perfectly also.
Member

It should probably not be WM_CURSOR_DEFAULT though? (havent checked in depth though)

It should probably not be `WM_CURSOR_DEFAULT` though? (havent checked in depth though)
Author
Member

during this time the cursor must be the pencil, when you confirm, the cursor is reseted

@antoniov ok, you mean cursor reset to default "arrow"?
But Later if I move mouse over other area (let's say properties panel), it'll remove the "default cursor arrow". Isn't this inconsistent? :)

> during this time the cursor must be the pencil, when you confirm, the cursor is reseted @antoniov ok, you mean cursor reset to default "arrow"? But Later if I move mouse over other area (let's say properties panel), it'll remove the "default cursor arrow". Isn't this inconsistent? :)
Philipp Oeser self-assigned this 2022-11-23 13:54:42 +01:00
Member

Got a fix

Got a fix

This issue was referenced by b0810f788c

This issue was referenced by b0810f788c9edb326300320d482502c5f5ea28e2
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102650
No description provided.