source/blender/editors/gpencil/gpencil_fill.c
@@ -2461,7 +2461,7 @@ static void gpencil_fill_exit(bContext *C, wmOperator *op)
     if (tgpf->draw_handle_3d) {
       ED_region_draw_cb_exit(tgpf->region->type, tgpf->draw_handle_3d);
     }
-    WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DEFAULT);
+    WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DOT);
 
     /* Remove depth buffer in cache. */
     if (tgpf->depths) {
@@ -3011,7 +3011,7 @@ static int gpencil_fill_modal(bContext *C, wmOperator *op, const wmEvent *event)
         tgpf->initial_length = len_v2(mlen);
       }
       if (event->val == KM_RELEASE) {
-        WM_cursor_set(CTX_wm_window(C), WM_CURSOR_DEFAULT);
+        WM_cursor_modal_set(CTX_wm_window(C), WM_CURSOR_PAINT_BRUSH);
 
         tgpf->mouse_init[0] = -1.0f;
         tgpf->mouse_init[1] = -1.0f;
